--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>Statify</title>
   </head>
   <body>
     <div class="root" id="root"></div>
